# WeatherProjectAS

./: README.md  app.py  main.py  places_map.html  pyproject.toml  reqirements.txt  settings.json
