[tool.poetry]
name = "weatherprojectas"
version = "0.1.0"
description = ""
authors = ["AS-ai25 <amir.shmaryahu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.1"
requests = "^2.32.4"
streamlit = "^1.47.0"
pycountry = "^24.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
